--- a/gmbindertheme.css
+++ b/gmbindertheme.css
@@ -38,7 +38,7 @@
   font-size: 400%;
   text-align: center;
   text-shadow: 0px 0px 5px black;
-  color:white;
+  color:black;
   text-transform: uppercase;
   background-image: url('https://groumy.github.io/homebrewery-sotdl/images/h1.banner-large.png');
   background-size: 100% 100%;
